Fix image layout overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,13 @@
-
-
-
+.profile-pic {
+  position: relative;
+  max-width:130px;
+  max-height:130px;
+  width: auto;
+  height: auto;
+  overflow: hidden;
   /* display: inline-block; */
+
+
   
   
   /* background-size: cover;  */
@@ -688,13 +694,4 @@ small {
     background-position-x: 30%;
   }
 }
-.profile-pic {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 10px; /* or 50% for circle */
-  display: block;
-  margin: 0 auto;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  max-width: 100%;
-}
+
